prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: proj-app
  name: proj-app-svc
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: proj-app
